removed unused files, cleaned up folder structure, got js executing with debugging

--- a/blank.html
+++ b/blank.html
@@ -9,10 +9,11 @@
 
         <script src='./js/jquery-2.1.1.min.js' type='text/javascript'></script>
         <script src='./js/main.js' type='text/javascript'></script>
+        <script src='./js/plugins.js' type='text/javascript'></script>
     </head>
     <body>
         <div id="wrapper">
-            <p>boom</p>
+            <p>boom s</p>
         </div>
     </body>
 </html>
