all data live updating

--- a/blank.html
+++ b/blank.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Blank New Tab</title>
+        <title>Your Carbon Footprint</title>
         
         <meta charset="utf-8">
         
@@ -13,7 +13,10 @@
     </head>
     <body>
         <div id="wrapper">
-            <p>boom s</p>
+            <p>Computer: <span id="c_time"></span> minutes, <span id="c_co2"></span> kg of CO2.</p>
+            <p>Facebook: <span id="fb_time"></span> minutes, <span id="fb_co2"></span> kg of CO2.</p>
+            <p>Netflix: <span id="yt_time"></span> minutes, <span id="n_co2"></span> kg of CO2.</p>
+            <p>YouTube: <span id="n_time"></span> minutes, <span id="yt_co2"></span> kg of CO2.</p>
         </div>
     </body>
 </html>
