--- a/blank.html
+++ b/blank.html
@@ -15,8 +15,9 @@
         <div id="wrapper">
             <p>Computer: <span id="c_time"></span> minutes, <span id="c_co2"></span> kg of CO2.</p>
             <p>Facebook: <span id="fb_time"></span> minutes, <span id="fb_co2"></span> kg of CO2.</p>
-            <p>Netflix: <span id="yt_time"></span> minutes, <span id="n_co2"></span> kg of CO2.</p>
-            <p>YouTube: <span id="n_time"></span> minutes, <span id="yt_co2"></span> kg of CO2.</p>
+            <p>Netflix: <span id="n_time"></span> minutes, <span id="n_co2"></span> kg of CO2.</p>
+            <p>YouTube: <span id="yt_time"></span> minutes, <span id="yt_co2"></span> kg of CO2.</p>
+            <p>Total: <span id="total_co2"></span> kg of CO2.</p>
         </div>
     </body>
 </html>
