--- a/blank.html
+++ b/blank.html
@@ -1,9 +1,10 @@
 <html>
     <head>
-        <title>Your Carbon Footprint</title>
+        <title>Your Cloud Carbon Footprint</title>
         
         <meta charset="utf-8">
         
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,500' rel='stylesheet' type='text/css'>
         <link href='./css/reset.css' media='all' rel='stylesheet' type='text/css' />
         <link href='./css/main.css' media='all' rel='stylesheet' type='text/css' />
 
@@ -13,11 +14,25 @@
     </head>
     <body>
         <div id="wrapper">
-            <p>Computer: <span id="c_time"></span> minutes, <span id="c_co2"></span> kg of CO2.</p>
-            <p>Facebook: <span id="fb_time"></span> minutes, <span id="fb_co2"></span> kg of CO2.</p>
-            <p>Netflix: <span id="n_time"></span> minutes, <span id="n_co2"></span> kg of CO2.</p>
-            <p>YouTube: <span id="yt_time"></span> minutes, <span id="yt_co2"></span> kg of CO2.</p>
-            <p>Total: <span id="total_co2"></span> kg of CO2.</p>
+            <h1 class="bigRoboto">Total: <span id="total_co2"></span> <span class="smaller">kg of CO<sub>2</sub></span></h1>
+            <div class="companies clear">
+                <div class="company laptop">
+                    <p class="name">Computer: <span id="c_co2"></span> kg of CO<sub>2</sub></p>
+                    <p class="time">Usage: <span id="c_time"></span></p>
+                </div>
+                <div class="company fb">
+                    <p class="name">Facebook: <span id="fb_co2"></span> kg of CO<sub>2</sub></p>
+                    <p class="time">Usage: <span id="fb_time"></span></p>
+                </div>
+                <div class="company netflix">
+                    <p class="name">Netflix: <span id="n_co2"></span> kg of CO<sub>2</sub></p>
+                    <p class="time">Usage: <span id="n_time"></span></p>
+                </div>
+                <div class="company yt last">
+                    <p class="name">YouTube: <span id="yt_co2"></span> kg of CO<sub>2</sub></p>
+                    <p class="time">Usage: <span id="yt_time"></span></p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
