--- a/blank.html
+++ b/blank.html
@@ -14,23 +14,25 @@
     </head>
     <body>
         <div id="wrapper">
-            <h1 class="bigRoboto">Total: <span id="total_co2"></span> <span class="smaller">kg of CO<sub>2</sub></span></h1>
+            <a href="https://github.com/chrisallick/FacebookCarbonFootprintChromeExtension/blob/master/README.md" target="_blank" id="info"><img src="./img/info.png" /></a>
+            <h2 class="big"><img src="./img/total.png" /></h2>
+            <h1><span id="total_co2"></span></h1>
             <div class="companies clear">
                 <div class="company laptop">
-                    <p class="name">Computer: <span id="c_co2"></span> kg of CO<sub>2</sub></p>
-                    <p class="time">Usage: <span id="c_time"></span></p>
+                    <p class="name"><img src="./img/computer.png" /></span></p>
+                    <p class="time"><span id="c_co2"></span></p>
                 </div>
                 <div class="company fb">
-                    <p class="name">Facebook: <span id="fb_co2"></span> kg of CO<sub>2</sub></p>
-                    <p class="time">Usage: <span id="fb_time"></span></p>
+                    <p class="name"><img src="./img/facebook.png" /></p>
+                    <p class="time"><span id="fb_co2"></span></p>
                 </div>
                 <div class="company netflix">
-                    <p class="name">Netflix: <span id="n_co2"></span> kg of CO<sub>2</sub></p>
-                    <p class="time">Usage: <span id="n_time"></span></p>
+                    <p class="name"><img src="./img/netflix.png" /></p>
+                    <p class="time"><span id="n_co2"></span></p>
                 </div>
                 <div class="company yt last">
-                    <p class="name">YouTube: <span id="yt_co2"></span> kg of CO<sub>2</sub></p>
-                    <p class="time">Usage: <span id="yt_time"></span></p>
+                    <p class="name"><img src="./img/youtube.png" /></p>
+                    <p class="time"><span id="yt_co2"></span></p>
                 </div>
             </div>
         </div>
