--- a/blank.html
+++ b/blank.html
@@ -15,23 +15,23 @@
     <body>
         <div id="wrapper">
             <a href="https://github.com/chrisallick/FacebookCarbonFootprintChromeExtension/blob/master/README.md" target="_blank" id="info"><img src="./img/info.png" /></a>
-            <h2 class="big"><img src="./img/total.png" /></h2>
+            <h2 class="big"><img width="326px" src="./img/total.png" /></h2>
             <h1><span id="total_co2"></span></h1>
             <div class="companies clear">
                 <div class="company laptop">
-                    <p class="name"><img src="./img/computer.png" /></span></p>
+                    <p class="name"><img width="97px" src="./img/computer.png" /></span></p>
                     <p class="time"><span id="c_co2"></span></p>
                 </div>
                 <div class="company fb">
-                    <p class="name"><img src="./img/facebook.png" /></p>
+                    <p class="name"><img width="93px" src="./img/facebook.png" /></p>
                     <p class="time"><span id="fb_co2"></span></p>
                 </div>
                 <div class="company netflix">
-                    <p class="name"><img src="./img/netflix.png" /></p>
+                    <p class="name"><img width="72px" src="./img/netflix.png" /></p>
                     <p class="time"><span id="n_co2"></span></p>
                 </div>
                 <div class="company yt last">
-                    <p class="name"><img src="./img/youtube.png" /></p>
+                    <p class="name"><img width="82px" src="./img/youtube.png" /></p>
                     <p class="time"><span id="yt_co2"></span></p>
                 </div>
             </div>
