added a figure related to gas

--- a/blank.html
+++ b/blank.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Your Cloud Carbon Footprint</title>
+        <title>CO2 Footprint</title>
         
         <meta charset="utf-8">
         
@@ -17,6 +17,7 @@
             <a href="https://github.com/chrisallick/FacebookCarbonFootprintChromeExtension/blob/master/README.md" target="_blank" id="info"><img src="./img/info.png" /></a>
             <h2 class="big"><img width="326px" src="./img/total.png" /></h2>
             <h1><span id="total_co2"></span></h1>
+            <p id="gas_usage">That's <span id="gas"></span> gallons of gas.</p>
             <div class="companies clear">
                 <div class="company laptop">
                     <p class="name"><img width="97px" src="./img/computer.png" /></span></p>
